--- a/styles/style.css
+++ b/styles/style.css
@@ -1,24 +1,83 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-body {
+
+* {
     font-family: 'Poppins', sans-serif;
-    background-color: #464663;
     color: #ffffff;
     padding: 0;
     margin: 0;
+}   
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #373740;
 }
 
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 10%;
     text-align: center;
-    padding: 50px;
+    background-image: linear-gradient(45.34deg, #b352f8 5.66%, #00ddff 94.35%);
 }
 
-main {
-    padding: 20px;
+
+
+
+/* nav bar css V */
+
+li, a, button{
+    text-decoration: none;
 }
+
+.nav-links{
+    list-style: none;
+}
+
+.nav-links li{
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.nav-links li a{
+    transition: all 0.3s ease 0s;
+    color: white;
+}
+
+.nav-links li a:hover {
+    color: #b352f8;
+}
+
+
+button {
+    padding: 12px;
+    color: #ffffff;
+    background-color: #b352f8;
+    border: none;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+}
+
+button:hover{
+    background-color: rgba(0, 221, 255);
+}
+/* nav bar css ^ */
+
+
+
+
+
+
+main {
+    padding: 80px;
+
+} 
 
 footer {
     text-align: center;
     padding: 10px;
+    color: #ffffff
 }
 
 section{
@@ -39,6 +98,26 @@ section{
     opacity: 1;
     filter: blur(0);
     transform: translateX(0);
+}
+
+.footer-main{
+    background-color: #51517c;
+}
+
+.highlighted-projects{
+    text-align: center;
+    list-style: inside;
+}
+
+.about-me{
+    text-align: center;
+
+}
+
+.hprojects{
+    width: 70%;
+    margin: auto;
+
 }
 
 @media(prefers-reduced-motion) {
