--- a/global.css
+++ b/global.css
@@ -1,12 +1,14 @@
 :root {
     --primary-color: white;
-    --secondary-color: cornflowerblue;
+    --secondary-color: #007acc;
     --dark-color: #1D2226;
     --light-color: #F3F2EF;
     --text-color: white;
     --accent-color: darkcyan;
-    --body-background: rgb(50, 60, 80);
+    --body-background: #1E1E1E
 }
+
+/* tags */
 
 * {
     margin: 0;
@@ -16,15 +18,17 @@
     color: var(--text-color);
 }
 
+
 header{
-    background: var(--dark-color);
+    background: var(--body-background);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    padding: 1rem 0;
     /*position: fixed;*/
     width: 100%;
     top: 0;
     z-index: 100;
+    margin-bottom: 100px;
 }
+
 
 body {
     background: var(--body-background);
@@ -33,13 +37,13 @@ body {
 
 a {
     text-decoration: -moz-hyperlinktext;
-    color: var(--accent-color);
+    color: var(--secondary-color);
 }
 
 h1 {
     font-size: 4em;
     margin-bottom: 1rem;
-    color: var(--dark-color);
+    line-height: 50px;
 }
 
 h2 {
@@ -49,38 +53,17 @@ h2 {
     color: var(--secondary-color);
 }
 
+h3 {
+    font-size: 2rem;
+    font-weight: 500;
+    margin-bottom: 1.5rem;
+    color: var(--text-color);
+}
+
 .logo {
     font-weight: 700;
-    font-size: 5em;
-    color: var(--primary-color);
-}
-
-.navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2rem;
-}
-
-.nav-links {
-    display: flex;
-    list-style: none;
-}
-
-.nav-links li {
-    margin-left: 2rem;
-}
-
-.nav-links a {
-    font-weight: 600;
-    transition: color 0.3s;
-    color: var(--primary-color)
-}
-
-.nav-links a:hover {
-    color: var(--secondary-color);
+    font-size: 3em;
+    color: var(--text-color);
 }
 
 .social-links {
@@ -91,7 +74,7 @@ h2 {
 }
 
 .social-links a {
-    color: white;
+    color: var(--text-color);
     font-size: 1.5rem;
     transition: color 0.3s;
 }
@@ -100,9 +83,27 @@ h2 {
     color: var(--secondary-color);
 }
 
+
+
+/* Footer */
+
 footer {
     background-color: var(--dark-color);
     color: white;
-    padding: 3rem 2rem;
     text-align: center;
+}
+
+.status-bar {
+    background-color: var(--secondary-color);
+    color: white;
+    padding: 5px 15px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 0.8rem;
+    margin-bottom: 1rem;
+}
+
+.status-items {
+    display: flex;
+    gap: 15px;
 }
