--- a/landing-page.css
+++ b/landing-page.css
@@ -1,73 +1,110 @@
+* {
+    font-family: "Audiowide" ,Roboto, Arial, sans-serif;
+}
 
+ html, body {
+     height: 100%;
+     margin: 0;
+     padding: 0;
+     overflow: hidden;
+ }
 
+body {
+    background-color: black;
+    color: white;
+}
 
-/* landing page intro */
+.flex-container {
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: stretch;
+}
 
-.landing-intro-content {
-    width: 100%;
-    padding: 0 2rem;
-    display: block;
+header {
+    height: 100vh;
+    width: 100vw;
+    display: grid;
+    grid-template-columns: 0.2fr 1fr 4fr 5fr;
+}
+
+.landing-intro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin: 150px auto;
 }
 
-.landing-intro-text {
-    flex: 1;
+.landing-intro h1 {
+    font-size: clamp(0.1rem, 3vw, 15rem);
 }
 
-/* landing page about */
-
-.landing-about {
-    padding: 5rem 2rem;
-    max-width: 1200px;
-    margin: 0 auto;
+.landing-intro p {
+    font-size: clamp(0.1rem, 1vw, 6rem);
 }
 
-.landing-section-title {
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 3rem;
-    color: var(--dark-color);
-}
-
-.landing-about-content {
+.landing-social {
+    flex-direction: row;
     display: flex;
-    gap: 3rem;
-    align-items: flex-start;
+    writing-mode: vertical-rl;
+    transform: rotate(180deg);
+    margin-top: auto;
+    opacity: 0.7;
+    font-size: clamp(0.1rem, 1vw, 10rem);
 }
 
-.landing-about-text {
-    flex: 2;
+.landing-social .space {
+    height: calc(30% - 3em);
 }
 
-.skill-tags {
+.landing-social a {
+    cursor: pointer;
+}
+
+.landing-nav {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-top: 1rem;
-}
-
-.skill-tag {
-    background-color: white;
-    padding: 0.5rem 1rem;
-    border-radius: 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+    flex-direction: column;
+    justify-content: center;
+    font-size: 6vw;
     font-weight: 500;
-    color: var(--secondary-color)
 }
 
-/* landing page images */
-
-.div-image {
-    flex: 1;
-    text-align: center;
+.border {
+    position: fixed;
+    top: 2vw;
+    left: 2vw;
+    right: 2vw;
+    bottom: 2vw;
+    border: 2px solid white;
+    pointer-events: none;
+    z-index: 1000;
 }
 
-.landing-profile-pic {
-    width: 350px;
-    height: 350px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 8px solid white;
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+nav {
+    display: flex;
+    flex-direction: column;
+    width: calc(65% - 3em);
+    height: 100%;
+    justify-content: center;
+}
+
+nav a {
+    font-size: 7vw;
+    cursor: pointer;
+    color: white;
+    display: inline-block;
+    width: fit-content;
+    padding: 0 30px 0 0;
+    margin: 0;
+    background-image: linear-gradient(to right, white 100%, white 100%);
+    background-repeat: no-repeat;
+    background-position: left bottom;
+    background-size: 0% 100%;
+    transition: background-size 0.4s ease;
+}
+
+nav a:hover {
+    background-size: 100% 100%;
+    color: black;
+    font-style: italic;
 }
