--- a/view/index.html
+++ b/view/index.html
@@ -25,7 +25,7 @@
         <a href="projects.html">Projects</a>
         <a href="https://radio.worm.org/">Music</a>
         <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="contact.html">Contact</a>
       </nav>
     </header>
 
