--- a/view/projects.html
+++ b/view/projects.html
@@ -23,7 +23,7 @@
     </div>
     <nav class="landing-nav">
         <a href="#">Garbage app</a>
-        <a href="index.html">Back</a>
+        <a href="landing.html">Back</a>
     </nav>
 </header>
 
