--- a/view/contact.html
+++ b/view/contact.html
@@ -25,7 +25,7 @@
     <nav class="landing-nav">
         <a href="https://www.linkedin.com/in/tobias-zelders-600688211/?locale=en_US">LinkedIn</a>
         <a href="https://github.com/TobiZelders">GitHub</a>
-        <a href="index.html">Back</a>
+        <a href="landing.html">Back</a>
     </nav>
 </header>
 
